# skyengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
editor/: CMakeLists.txt
editor/cmake/: TargetShaders.cmake
editor/res/models/: plane.glb  sphere.glb
editor/res/shaders/: bindless.glsl  brdf_lut.frag  cubemap.vert  debug_line.frag  debug_line.vert  equirect_to_cubemap.frag  equirect_to_cubemap.vert  format_converter.frag  grid.frag  grid.vert  imgui_pcs.glsl  irradiance.frag  lighting.glsl  materials.glsl  mesh.frag  mesh_pcs.glsl  multiscatter_lut.comp  pbr.glsl  post_fx.frag  prefilter_envmap.frag  scene_data.glsl  sky.frag  sky.vert  sky_common.glsl  sky_lut.comp  skybox.frag  skybox.vert  sprite.frag  sprite.vert  sprite_pcs.glsl  thumbnail_gradient.frag  transmittance_lut.comp  triangle.frag  triangle.vert  vertex.glsl
editor/src/: editor.cpp  editor_layer.cpp  editor_layer.h
editor/src/debug_panels/: asset_browser_panel.cpp  asset_browser_panel.h  asset_browser_popup.cpp  asset_browser_popup.h  environment_panel.cpp  environment_panel.h  import_panel.cpp  import_panel.h  inspector_panel.cpp  inspector_panel.h  logs_panel.cpp  logs_panel.h  project_manager_panel.cpp  project_manager_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  titlebar_panel.cpp  titlebar_panel.h  viewport_panel.cpp  viewport_panel.h
sky/: CMakeLists.txt
sky/src/: skypch.h
sky/src/asset_management/: asset.cpp  asset.h  asset_importer.cpp  asset_importer.h  asset_manager.h  asset_manager_base.h  editor_asset_manager.cpp  editor_asset_manager.h  material_importer.cpp  material_importer.h  mesh_importer.cpp  mesh_importer.h  scene_importer.cpp  scene_importer.h  texture_cube_importer.cpp  texture_cube_importer.h  texture_importer.cpp  texture_importer.h
sky/src/core/: Application.h  application.cpp  application.h  buffer.h  color.cpp  color.h  editor.h  entry_point.cpp  filesystem.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  uuid.cpp  uuid.h  window.cpp  window.h
sky/src/core/events/: event.h  event_bus.h  input.h  key_codes.h  key_event.h  mouse_codes.h  mouse_event.h
sky/src/core/helpers/: date_fns.cpp  date_fns.h  file.h  file_dialogs.cpp  file_dialogs.h  image.cpp  image.h  imgui.cpp  imgui.h  string.cpp  string.h  yaml.cpp  yaml.h
sky/src/core/log/: log.cpp  log.h  log_sink.cpp  log_sink.h
sky/src/core/math/: aabb.h  fps_counter.h  math.cpp  math.h  sphere.h
sky/src/core/project_management/: project_manager.cpp  project_manager.h
sky/src/core/resource/: custom_thumbnail.cpp  custom_thumbnail.h  environment_serializer.cpp  environment_serializer.h  import_data.cpp  import_data.h  material_serializer.cpp  material_serializer.h  mesh_serializer.cpp  mesh_serializer.h  texture_cube_serializer.cpp  texture_cube_serializer.h  texture_serializer.cpp  texture_serializer.h
sky/src/core/tasks/: task.cpp  task.h  task_manager.cpp  task_manager.h
sky/src/core/transform/: transform.cpp  transform.h
sky/src/graphics/vulkan/: vk_NBuffer.cpp  vk_NBuffer.h  vk_bindless_set.cpp  vk_bindless_set.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_image_cache.cpp  vk_image_cache.h  vk_images.cpp  vk_images.h  vk_imgui_backend.cpp  vk_imgui_backend.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_swapchain.cpp  vk_swapchain.h  vk_types.h  vk_utils.cpp  vk_utils.h
sky/src/physics/: physics_debug_renderer.cpp  physics_debug_renderer.h  physics_manager.cpp  physics_manager.h  physics_shapes.h  physics_world.cpp  physics_world.h  rigid_body.cpp  rigid_body.h
sky/src/renderer/: environment.cpp  environment.h  frustum_culling.cpp  frustum_culling.h  image_based_lighting.cpp  image_based_lighting.h  light.cpp  light.h  light_cache.cpp  light_cache.h  material.h  material_cache.cpp  material_cache.h  mesh.h  mesh_cache.cpp  mesh_cache.h  model_loader.cpp  model_loader.h  scene_renderer.cpp  scene_renderer.h  shadow_mapping.cpp  shadow_mapping.h  sprite.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
sky/src/renderer/camera/: camera.cpp  camera.h  camera_frustum.cpp  camera_frustum.h  editor_camera.cpp  editor_camera.h  game_camera.cpp  game_camera.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h
sky/src/renderer/passes/: csm.h  debug_line_renderer.cpp  debug_line_renderer.h  depth_resolve.cpp  depth_resolve.h  equirectangular_to_cubemap.cpp  equirectangular_to_cubemap.h  format_converter.cpp  format_converter.h  forward_renderer.cpp  forward_renderer.h  infinite_grid.cpp  infinite_grid.h  pass.h  post_fx.cpp  post_fx.h  sky_atmosphere.cpp  sky_atmosphere.h  skybox.cpp  skybox.h  thumbnail_gradient.cpp  thumbnail_gradient.h
sky/src/renderer/passes/skybox/: brdf_lut.cpp  brdf_lut.h  equirectangular_to_cubemap.cpp  equirectangular_to_cubemap.h  irradiance.cpp  irradiance.h  prefilering.h  prefiltering.cpp  skybox.cpp
sky/src/scene/: component_list.h  components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_graph.cpp  scene_graph.h  scene_manager.cpp  scene_manager.h  scene_serializer.cpp  scene_serializer.h
sky/src/scene/systems/: camera_system.cpp  camera_system.h  physics_system.cpp  physics_system.h  transform_system.cpp  transform_system.h
